Fixed "let's connect" link through z-index

--- a/style.css
+++ b/style.css
@@ -148,11 +148,10 @@ section.lets-connect {
   margin-right: -50vw;
   background-color: var(--primary);
   height: 92px;
+  z-index:10
 }
 
-section#connect-linkedin {
-  width: 100%;
-}
+
 
 h4,
 a.linkedin {
